--- a/Take-home_Ex/Take-home_Ex02/Take-home_Ex02.qmd
+++ b/Take-home_Ex/Take-home_Ex02/Take-home_Ex02.qmd
@@ -247,7 +247,7 @@ The **Drug Offenses** dataset has some naming issues with `province_name`.
 
 We found two discrepancies: **Loburi** should be changed to **Lop Buri**, and **buogkan** should be updated to **Bueng Kan** to match the **Province Boundaries** dataset.
 
-We will update the `province_name` entries in the **Drug Offenses** dataset accordingly.s
+We will update the `province_name` entries in the **Drug Offenses** dataset accordingly.
 :::
 :::
 
@@ -402,7 +402,7 @@ drug_trends <- drug_offenses_by_province %>%
 # Plot trend over time with formatted y-axis labels
 ggplot(drug_trends, aes(x = year, y = total_cases)) +
   geom_line(color = "blue") +
-  geom_point(size = 3, color = "red") +  # Optional: Add points for better visibility
+  geom_point(size = 3, color = "red") +  
   labs(title = "Drug Abuse Cases Over Time",
        x = "Year", y = "Total Cases") +
   scale_y_continuous(labels = comma)
@@ -951,7 +951,12 @@ local_moran_map_2017 <- tm_shape(lisa_2017) +
 local_moran_pvalue_map_2017 <- tm_shape(lisa_2017) +
   tm_fill("p_ii",
           breaks = c(0, 0.001, 0.01, 0.05, 1),
-              labels = c("0.001", "0.01", "0.05", "Not sig")) + 
+              labels = c(
+                "Highly significant (< 0.001)", 
+                "Significant (0.001 - 0.01)",
+                "Moderately significant (0.01 - 0.05)", 
+                "Not significant (> 0.05)"
+              )) + 
   tm_borders(alpha = 0.5) +
   tm_layout(main.title = "p-value of local Moran's I of Total Cases in 2017",
             main.title.size = 2.5,   
@@ -1034,7 +1039,12 @@ local_moran_map_2018 <- tm_shape(lisa_2018) +
 local_moran_pvalue_map_2018 <- tm_shape(lisa_2018) +
   tm_fill("p_ii",
           breaks = c(0, 0.001, 0.01, 0.05, 1),
-              labels = c("0.001", "0.01", "0.05", "Not sig")) + 
+              labels = c(
+                "Highly significant (< 0.001)", 
+                "Significant (0.001 - 0.01)",
+                "Moderately significant (0.01 - 0.05)", 
+                "Not significant (> 0.05)"
+              )) + 
   tm_borders(alpha = 0.5) +
   tm_layout(main.title = "p-value of local Moran's I of Total Cases in 2018",
             main.title.size = 2.5,   
@@ -1117,7 +1127,12 @@ local_moran_map_2019 <- tm_shape(lisa_2019) +
 local_moran_pvalue_map_2019 <- tm_shape(lisa_2019) +
   tm_fill("p_ii",
           breaks = c(0, 0.001, 0.01, 0.05, 1),
-              labels = c("0.001", "0.01", "0.05", "Not sig")) + 
+              labels = c(
+                "Highly significant (< 0.001)", 
+                "Significant (0.001 - 0.01)",
+                "Moderately significant (0.01 - 0.05)", 
+                "Not significant (> 0.05)"
+              )) + 
   tm_borders(alpha = 0.5) +
   tm_layout(main.title = "p-value of local Moran's I of Total Cases in 2019",
             main.title.size = 2.5,   
@@ -1200,7 +1215,12 @@ local_moran_map_2020 <- tm_shape(lisa_2020) +
 local_moran_pvalue_map_2020 <- tm_shape(lisa_2020) +
   tm_fill("p_ii",
           breaks = c(0, 0.001, 0.01, 0.05, 1),
-              labels = c("0.001", "0.01", "0.05", "Not sig")) + 
+              labels = c(
+                "Highly significant (< 0.001)", 
+                "Significant (0.001 - 0.01)",
+                "Moderately significant (0.01 - 0.05)", 
+                "Not significant (> 0.05)"
+              )) + 
   tm_borders(alpha = 0.5) +
   tm_layout(main.title = "p-value of local Moran's I of Total Cases in 2020",
             main.title.size = 2.5,   
@@ -1283,7 +1303,12 @@ local_moran_map_2021 <- tm_shape(lisa_2021) +
 local_moran_pvalue_map_2021 <- tm_shape(lisa_2021) +
   tm_fill("p_ii",
           breaks = c(0, 0.001, 0.01, 0.05, 1),
-              labels = c("0.001", "0.01", "0.05", "Not sig")) + 
+              labels = c(
+                "Highly significant (< 0.001)", 
+                "Significant (0.001 - 0.01)",
+                "Moderately significant (0.01 - 0.05)", 
+                "Not significant (> 0.05)"
+              )) + 
   tm_borders(alpha = 0.5) +
   tm_layout(main.title = "p-value of local Moran's I of Total Cases in 2021",
             main.title.size = 2.5,   
@@ -1366,7 +1391,12 @@ local_moran_map_2022 <- tm_shape(lisa_2022) +
 local_moran_pvalue_map_2022 <- tm_shape(lisa_2022) +
   tm_fill("p_ii",
           breaks = c(0, 0.001, 0.01, 0.05, 1),
-              labels = c("0.001", "0.01", "0.05", "Not sig")) + 
+              labels = c(
+                "Highly significant (< 0.001)", 
+                "Significant (0.001 - 0.01)",
+                "Moderately significant (0.01 - 0.05)", 
+                "Not significant (> 0.05)"
+              )) + 
   tm_borders(alpha = 0.5) +
   tm_layout(main.title = "p-value of local Moran's I of Total Cases in 2022",
             main.title.size = 2.5,   
@@ -1416,6 +1446,56 @@ image_read("data/rds/lisa_map_2022.png")
 ```
 :::
 
+::: callout-note
+**Computing Local Moran’s I**
+
+add new column \[local_moran\] -\> stores the calculated Local Moran's I values
+
+`zero.policy = TRUE` option allows the method to handle regions without neighbors appropriately.
+
+unnest(local_moran) -\> flatten the results, simplifying further analysis of the output.
+
+**Local Moran’s I VS P-Value Visualization**
+
+This segment creates visualizations for the Local Moran's I statistic and its associated p-values for the year 2017
+
+Local Moran's I values (color-coded) indicating spatial clustering: Ranges from -1.0 (cold spots) to 3.0 (strong hot spots). Provides insights into areas of similar or dissimilar values in case distribution.
+
+P-Value Map:
+
+Illustrates the statistical significance of Local Moran's I: Breaks defined for p-values (\< 0.001, 0.001-0.01, 0.01-0.05, \> 0.05).
+
+**Putting Together Significant LISA Results**
+
+This segment visualizes the significant clusters identified by the Local Moran's I analysis.
+
+The visualization includes both all regions and the significant clusters, with the latter highlighted based on their mean Local Moran's I values.
+
+1.  **Low-Low (LL)**
+
+-   **Definition**: Areas with low values surrounded by other low-value areas.
+
+-   **Interpretation**: Indicates regions that are underperforming or stable and may not need immediate intervention.
+
+2.  **High-Low (HL)**
+
+-   **Definition**: Areas with high values surrounded by low-value areas.
+
+-   **Interpretation**: Highlights potential hotspots that require further investigation or targeted intervention.
+
+3.  **Low-High (LH)**
+
+-   **Definition**: Areas with low values surrounded by high-value areas.
+
+-   **Interpretation**: Suggests vulnerability to spillover effects from neighboring high-value regions, requiring monitoring.
+
+4.  **High-High (HH)**
+
+-   **Definition**: Areas with high values surrounded by other high-value areas.
+
+-   **Interpretation**: Identifies significant hotspots that may need immediate attention and indicate systemic issues.
+:::
+
 ## Visualising LISA map across time span (2017-2022)
 
 ```{r}
@@ -1437,6 +1517,89 @@ image_write(lisa_animation, path = "data/rds/lisa_animation.gif")
 ```{r}
 image_read("data/rds/lisa_animation.gif")
 ```
+
+### Summarize Local Moran's I values
+
+```{r}
+#| eval: false
+
+summarize_local_moran <- function(data) {
+  data %>%
+    summarise(
+      mean_local_moran = mean(ii, na.rm = TRUE),
+      min_local_moran = min(ii, na.rm = TRUE),
+      max_local_moran = max(ii, na.rm = TRUE),
+      sd_local_moran = sd(ii, na.rm = TRUE),
+      mean_p_value = mean(p_ii_sim, na.rm = TRUE),
+      min_p_value = min(p_ii_sim, na.rm = TRUE),
+      max_p_value = max(p_ii_sim, na.rm = TRUE),
+      count_high_high = sum(ii > 0 & p_ii_sim < 0.05),
+      count_low_low = sum(ii < 0 & p_ii_sim < 0.05),
+      count_high_low = sum(ii > 0 & p_ii_sim >= 0.05),
+      count_low_high = sum(ii < 0 & p_ii_sim >= 0.05)
+    )
+}
+
+# Apply the function to each year's dataset
+local_moran_summary_2017 <- summarize_local_moran(lisa_2017)
+local_moran_summary_2018 <- summarize_local_moran(lisa_2018)
+local_moran_summary_2019 <- summarize_local_moran(lisa_2019)
+local_moran_summary_2020 <- summarize_local_moran(lisa_2020)
+local_moran_summary_2021 <- summarize_local_moran(lisa_2021)
+local_moran_summary_2022 <- summarize_local_moran(lisa_2022)
+
+# Combine summaries into a single data frame
+local_moran_summary_all_years <- bind_rows(
+  mutate(local_moran_summary_2017, year = 2017),
+  mutate(local_moran_summary_2018, year = 2018),
+  mutate(local_moran_summary_2019, year = 2019),
+  mutate(local_moran_summary_2020, year = 2020),
+  mutate(local_moran_summary_2021, year = 2021),
+  mutate(local_moran_summary_2022, year = 2022)
+)
+
+write_rds(local_moran_summary_all_years, "data/rds/local_moran_summary_all_years.rds")
+```
+
+```{r}
+local_moran_summary_all_years <- read_rds("data/rds/local_moran_summary_all_years.rds")
+
+# Show all rows and columns
+print(local_moran_summary_all_years, n = Inf, width = Inf)
+
+```
+
+::: callout-note
+### Summary of Findings:
+
+1.  **Mean Local Moran's I Values**:
+
+    -   Ranged from **0.116 to 0.201**, indicating increasing clustering of values over time.
+
+2.  **Min/Max Local Moran's I**:
+
+    -   Minimum values: **-1.37 to -0.943** (low-value clusters).
+
+    -   Maximum values: **2.14 to 4.73** (significant high-value clusters).
+
+3.  **Standard Deviation**:
+
+    -   Varied from **0.384 to 0.608**, indicating differences in clustering variability across years.
+
+4.  **P-Values**:
+
+    -   Mean p-values consistent at **0.412 to 0.455**, with a minimum p-value of **0.02**, suggesting significant clustering.
+
+5.  **Cluster Counts**:
+
+    -   High-high clusters decreased from **7** in 2017 to **2** in 2019 but increased in later years.
+
+    -   Low-low clusters remained relatively low, peaking at **3** in 2022.
+
+6.  **Yearly Trends**:
+
+    -   2022 exhibited the highest mean Local Moran's I value (**0.201**), indicating stronger clustering effects.
+:::
 
 ## Hot Spot & Cold Spot Area Analysis (HCSA)
 
@@ -1918,6 +2081,30 @@ image_read("data/rds/hcsa_map_2022.png")
 ```
 :::
 
+::: callout-note
+### Summary of Gi\* and P-Value Analysis
+
+1.  *Gi Statistic (Hot Spot & Cold Spot Analysis)*\*
+
+    -   The *Gi statistic*\* is calculated to identify **clusters of high or low values** of total cases in a given area.
+
+    -   It measures whether the number of cases in a location is significantly higher (**hot spot**) or lower (**cold spot**) than would be expected by random distribution.
+
+2.  *P-Value of Gi Statistic*\*
+
+    -   The **p-value** determines the **statistical significance** of the observed clusters (hot or cold spots).
+
+    -   A low p-value (\< 0.05) suggests that the cluster is **unlikely to have occurred by chance**, while a higher p-value indicates randomness in the observed pattern.
+
+3.  **Purpose of Both Analyses**
+
+    -   *Gi* of Total Cases\* map visually displays the clustering of total cases.
+
+    -   **P-Value of Gi**\* map helps verify whether the identified clusters are **statistically significant** or if they might be due to random variation.
+
+These two analyses together provide a clear picture of where significant hot or cold spots are and how reliable these findings are. This ensures any conclusions drawn about spatial patterns are both **visualized** and **statistically validated**.
+:::
+
 ## Visualising HCSA map across time span (2017-2022)
 
 ```{r}
@@ -1936,8 +2123,92 @@ hcsa_animation <- image_animate(image_join(hcsa_images), fps = 1)
 image_write(hcsa_animation, path = "data/rds/hcsa_animation.gif")
 ```
 
+### Summary of HCSA
+
 ```{r}
-# Read the animations
+#| eval: false
+
+# Function to summarize HCSA values for a given year
+summarize_hcsa <- function(data) {
+  data %>%
+    summarise(
+      mean_gi_star = mean(gi_star, na.rm = TRUE),
+      min_gi_star = min(gi_star, na.rm = TRUE),
+      max_gi_star = max(gi_star, na.rm = TRUE),
+      sd_gi_star = sd(gi_star, na.rm = TRUE),
+      mean_p_value = mean(p_value, na.rm = TRUE),
+      min_p_value = min(p_value, na.rm = TRUE),
+      max_p_value = max(p_value, na.rm = TRUE),
+      count_hot_spots = sum(gi_star > 0 & p_value < 0.05),
+      count_cold_spots = sum(gi_star < 0 & p_value < 0.05),
+      count_non_significant = sum(p_value >= 0.05),
+      geometry = st_union(geometry)  # Combine geometries
+    )
+}
+
+# Summarizing HCSA for each year
+hcsa_summary_2017 <- summarize_hcsa(HCSA_2017)
+hcsa_summary_2018 <- summarize_hcsa(HCSA_2018)
+hcsa_summary_2019 <- summarize_hcsa(HCSA_2019)
+hcsa_summary_2020 <- summarize_hcsa(HCSA_2020)
+hcsa_summary_2021 <- summarize_hcsa(HCSA_2021)
+hcsa_summary_2022 <- summarize_hcsa(HCSA_2022)
+
+
+hcsa_summary_all <- bind_rows(
+  mutate(hcsa_summary_2017, year = 2017),
+  mutate(hcsa_summary_2018, year = 2018),
+  mutate(hcsa_summary_2019, year = 2019),
+  mutate(hcsa_summary_2020, year = 2020),
+  mutate(hcsa_summary_2021, year = 2021),
+  mutate(hcsa_summary_2022, year = 2022)
+)
+
+write_rds(hcsa_summary_all, "data/rds/hcsa_summary_all.rds")
+```
+
+```{r}
+hcsa_summary_all <- read_rds("data/rds/hcsa_summary_all.rds")
+
+# Show all rows and columns
+print(hcsa_summary_all, n = Inf, width = Inf)
+```
+
+::: callout-note
+### Summary of Findings:
+
+1.  *Mean Gi Values*\*:
+
+    -   Increased from **0.0838 (2017)** to **0.199 (2022)**, indicating more hot spots over time.
+
+2.  *Gi Range*\*:
+
+    -   Minimum values between **-2.61 to -1.47** (cold spots) and maximum values from **3.06 to 4.67** (significant hot spots).
+
+3.  **Standard Deviation**:
+
+    -   Stable variability in Gi\* scores, ranging from **1.20 to 1.36**.
+
+4.  **P-Values**:
+
+    -   Average p-values between **0.393 to 0.529**, suggesting many Gi\* values are not statistically significant.
+
+    -   Minimum p-values as low as **7.95e-13** indicate some significant hot spots.
+
+5.  **Count of Hot Spots and Cold Spots**:
+
+    -   Up to **7 hot spots in 2022**; several years reported **NA** for cold spots, indicating few or no significant cold spots.
+
+6.  **Overall Trends**:
+
+    -   An overall trend of increasing hot spot concentration from 2017 to 2022, suggesting growing areas affected by the phenomena studied (e.g., drug abuse, crime).
+
+### Conclusion
+
+The HCSA findings highlight a significant rise in hot spot areas over the years, which may require targeted interventions and further investigation into the factors influencing these changes.
+:::
+
+```{r}
 lisa_animation <- image_read("data/rds/lisa_animation.gif")
 hcsa_animation <- image_read("data/rds/hcsa_animation.gif")
 
@@ -1959,11 +2230,11 @@ hcsa_frames_list <- as.list(hcsa_animation)
 
 # Resize each frame to ensure no margins and same height
 lisa_frames_resized <- lapply(lisa_frames_list, function(frame) {
-  image_scale(frame, "800x")  # Adjust the width as needed
+  image_scale(frame, "800x")  
 })
 
 hcsa_frames_resized <- lapply(hcsa_frames_list, function(frame) {
-  image_scale(frame, "800x")  # Adjust the width as needed
+  image_scale(frame, "800x")  
 })
 
 # Combine corresponding frames side by side with no gaps
@@ -1992,7 +2263,7 @@ This will assess the trend of drug abuse in each province over multiple years. \
 trend_results <- summary_stats %>%
   group_by(province_name) %>%
   summarise(
-    total_cases = list(total_cases),         # Store total cases for each year in a list
+    total_cases = list(total_cases),         
     trend = MannKendall(unlist(total_cases))$tau,  # Tau value indicates trend direction
     p_value = MannKendall(unlist(total_cases))$sl,   # p-value for significance
   )
@@ -2034,7 +2305,6 @@ if (is.null(increasing_trends) || length(increasing_trends) == 0) {
   result <- paste(increasing_trends, collapse = ", ")
 }
 
-# Print the result
 cat(result, "\n")
 ```
 
@@ -2060,7 +2330,6 @@ if (is.null(decreasing_trends) || length(decreasing_trends) == 0) {
   result <- paste(decreasing_trends, collapse = ", ")
 }
 
-# Print the result
 cat(result, "\n")
 ```
 
@@ -2086,7 +2355,6 @@ if (is.null(stable_trends) || length(stable_trends) == 0) {
   result <- paste(stable_trends, collapse = ", ")
 }
 
-# Print the result
 cat(result, "\n")
 ```
 :::
